--- a/client/src/color.css
+++ b/client/src/color.css
@@ -1,11 +1,25 @@
-.bg-Automotive-custom { background-color: rgb(25, 25, 112) !important; }
-.bg-Bills-custom { background-color: rgb(0, 255, 255) !important; }
-.bg-Entertainment-custom { background-color: rgb(255, 0, 150) !important; }
-.bg-Food-custom { background-color:rgb(0, 102, 102) !important; } 
-.bg-Gifts-custom { background-color: rgb(235, 200, 165) !important; } 
-.bg-Groceries-custom { background-color: rgb(255, 182, 193) !important; }
-.bg-Health-custom { background-color:rgb(54, 69, 79) !important; }
-.bg-Home-custom { background-color: rgb(0, 200, 83) !important; }
+.bg-Automotive-custom { 
+    background-color: rgb(25, 25, 112) !important;
+    color: white; }
+.bg-Bills-custom { 
+    background-color: rgb(0, 255, 255) !important;}
+.bg-Entertainment-custom { 
+    background-color: rgb(255, 0, 150) !important; }
+.bg-Food-custom { 
+    background-color:rgb(0, 102, 102) !important; 
+    color: white;
+} 
+.bg-Gifts-custom { 
+    background-color: rgb(235, 200, 165) !important; } 
+.bg-Groceries-custom { 
+    background-color: rgb(255, 182, 193) !important; }
+.bg-Health-custom { 
+    background-color:rgb(54, 69, 79) !important; 
+    color: white;
+}
+.bg-Home-custom { 
+    background-color: rgb(0, 200, 83) !important; 
+    }
 .bg-Miscellaneous-custom { background-color:rgb(255, 193, 7) !important; }
 .bg-Travel-custom { background-color:rgb(200, 150, 255) !important; }
 
