--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: RGB(2, 17, 36);
+  /* background-color: RGB(2, 17, 36);
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom: 2rem; */
 }
