--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,39 +1,43 @@
-.bg-Automotive-custom { 
+.Automotive-custom { 
     background-color: rgb(25, 25, 112) !important;
     color: white !important; }
-.bg-Bills-custom { 
+.Bills-custom { 
     background-color: rgb(0, 255, 255) !important;
     color: black !important;}
-.bg-Entertainment-custom { 
+.Entertainment-custom { 
     background-color: rgb(255, 0, 150) !important; 
     color: black !important;}
-.bg-Food-custom { 
+.Food-custom { 
     background-color:rgb(0, 102, 102) !important; 
     color: white !important;} 
-.bg-Gifts-custom { 
+.Gifts-custom { 
     background-color: rgb(235, 200, 165) !important; 
     color: black !important;} 
-.bg-Groceries-custom { 
+.Groceries-custom { 
     background-color: rgb(255, 182, 193) !important; 
     color: black !important;}
-.bg-Health-custom { 
+.Health-custom { 
     background-color:rgb(54, 69, 79) !important; 
     color: white !important;
 }
-.bg-Home-custom { 
+.Home-custom { 
     background-color: rgb(0, 200, 83) !important; 
     color: black !important;}
-.bg-Miscellaneous-custom { 
+.Miscellaneous-custom { 
     background-color:rgb(255, 193, 7) !important; 
     color: black !important;}
-.bg-Travel-custom { 
+.Travel-custom { 
     background-color:rgb(200, 150, 255) !important; 
     color: black !important;}
 
-.bg-spacing {
+.category-tag-spacing {
     padding-left: .75rem;
     padding-right: .75rem;
     padding-top: .3rem;
     padding-bottom: .3rem;
     border-radius: .5rem;
 }
+
+.carousel-indicators {
+    bottom: -30px;
+  }
